--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,22 +28,78 @@ networks:
   edgex-network:
     driver: bridge
 services:
+
+  monitoring:
+    build:
+      context: .
+      dockerfile: ./services/monitoring/Dockerfile
+    container_name: edgex-monitoring
+    ports:
+      - "0.0.0.0:8080:8080"
+    depends_on:
+      - mqtt-broker
+    networks:
+      - edgex-network
+
+  visualization:
+    build:
+      context: .
+      dockerfile: ./services/visualization/Dockerfile
+    container_name: edgex-visualization
+    environment:
+      BROKER_ADDRESS: edgex-mqtt-broker
+      INFLUX_URL: http://influxdb:8086
+    networks:
+      - edgex-network
+    depends_on:
+      - influxdb
+      - mqtt-broker
+
+  mqtt-broker:
+    image: eclipse-mosquitto
+    command: "/usr/sbin/mosquitto -c /mosquitto-no-auth.conf"
+    ports:
+      - "0.0.0.0:1883:1883"
+    container_name: edgex-mqtt-broker
+    hostname: edgex-mqtt-broker
+    read_only: true
+    restart: always
+    networks:
+      - edgex-network
+    security_opt:
+      - no-new-privileges:true
+
   influxdb:
-      image: influxdb:latest
-      networks:
-        - default
-      ports:
-        - "8086:8086"
-      volumes:
-        - ./influxdb-storage:/var/lib/influxdb
+    image: influxdb:latest
+    hostname: influxdb
+    networks:
+      - edgex-network
+    ports:
+      - "0.0.0.0:8086:8086"
+    volumes:
+      - ./influxdb-storage:/var/lib/influxdb
+
   grafana:
     image: grafana/grafana:latest
     ports:
-      - "3000:3000"
+      - "0.0.0.0:3000:3000"
     volumes:
       - ./grafana-provisioning/:/etc/grafana/provisioning
     depends_on:
       - influxdb
+
+  color-changer:
+    build: ./colorChanger
+    container_name: color-changer-edgex
+    hostname: color-changer-edgex
+    networks:
+      - edgex-network
+    ports:
+      - "0.0.0.0:5000:5000"
+    environment:
+      - PORT=5000
+      - DEBUG=True
+      
   app-service-rules:
     container_name: edgex-app-rules-engine
     depends_on:
@@ -68,7 +124,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59701:59701/tcp
+    - 0.0.0.0:59701:59701/tcp
     read_only: true
     restart: always
     security_opt:
@@ -77,6 +133,7 @@ services:
   app-service-mqtt:
     container_name: edgex-app-mqtt
     depends_on:
+    - mqtt-broker
     - consul
     - data
     environment:
@@ -94,14 +151,14 @@ services:
       TRIGGER_EDGEXMESSAGEBUS_PUBLISHHOST_HOST: edgex-redis
       TRIGGER_EDGEXMESSAGEBUS_SUBSCRIBEHOST_HOST: edgex-redis
       TRIGGER_EDGEXMESSAGEBUS_SUBSCRIBEHOST_SUBSCRIBETOPICS: edgex/events/#/#/SmokeDetector/#       
-      WRITABLE_PIPELINE_FUNCTIONS_MQTTEXPORT_PARAMETERS_BROKERADDRESS: tcp://broker.mqttdashboard.com:1883
+      WRITABLE_PIPELINE_FUNCTIONS_MQTTEXPORT_PARAMETERS_BROKERADDRESS: edgex-mqtt-broker:1883
       WRITABLE_PIPELINE_FUNCTIONS_MQTTEXPORT_PARAMETERS_TOPIC: SmokeDetectorEvents
     hostname: edgex-app-mqtt
     image: edgexfoundry/app-service-configurable:2.0.0
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59702:59702/tcp
+    - 0.0.0.0:59702:59702/tcp
     read_only: true
     security_opt:
     - no-new-privileges:true
@@ -130,7 +187,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59882:59882/tcp
+    - 0.0.0.0:59882:59882/tcp
     read_only: true
     restart: always
     security_opt:
@@ -144,7 +201,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:8500:8500/tcp
+    - 0.0.0.0:8500:8500/tcp
     read_only: true
     restart: always
     security_opt:
@@ -175,8 +232,8 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:5563:5563/tcp
-    - 127.0.0.1:59880:59880/tcp
+    - 0.0.0.0:5563:5563/tcp
+    - 0.0.0.0:59880:59880/tcp
     read_only: true
     restart: always
     security_opt:
@@ -199,7 +256,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:6379:6379/tcp
+    - 0.0.0.0:6379:6379/tcp
     read_only: true
     restart: always
     security_opt:
@@ -229,7 +286,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59986:59986/tcp
+    - 0.0.0.0:59986:59986/tcp
     read_only: true
     restart: always
     security_opt:
@@ -257,7 +314,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59900:59900/tcp
+    - 0.0.0.0:59900:59900/tcp
     read_only: true
     restart: always
     security_opt:
@@ -286,7 +343,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59881:59881/tcp
+    - 0.0.0.0:59881:59881/tcp
     read_only: true
     restart: always
     security_opt:
@@ -313,7 +370,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59860:59860/tcp
+    - 0.0.0.0:59860:59860/tcp
     read_only: true
     restart: always
     security_opt:
@@ -340,7 +397,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59720:59720/tcp
+    - 0.0.0.0:59720:59720/tcp
     read_only: true
     restart: always
     security_opt:
@@ -371,7 +428,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:59861:59861/tcp
+    - 0.0.0.0:59861:59861/tcp
     read_only: true
     restart: always
     security_opt:
@@ -404,7 +461,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 127.0.0.1:58890:58890/tcp
+    - 0.0.0.0:58890:58890/tcp
     read_only: true
     restart: always
     security_opt:
@@ -423,7 +480,7 @@ services:
     networks:
       edgex-network: {}
     ports:
-    - 4000:4000/tcp
+    - 0.0.0.0:4000:4000/tcp
     read_only: true
     restart: always
     security_opt:
